# MagMatch

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  Makefile  README.md  newMatch.ipynb
include/: common_include.h  dataRead.hpp  fastDtw.hpp  magMatchBase.hpp  mktMM.h  nodeClass.hpp
src/: CMakeLists.txt  dataRead.cpp  fastDtw.cpp  magMatchBase.cpp  mktMM.cpp  nodeClass.cpp
test/: CMakeLists.txt  geoMag.cpp  main.cpp
tools/: dt.py  plotData.py
